Fix imports throughout.  Convert to asm6. Prepare for Java 10.